// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the server API returns all users 1`] = `
Object {
  "1": Object {
    "age": 29,
    "id": 1,
    "name": "Sam",
    "sex": "male",
  },
  "2": Object {
    "age": 10,
    "id": 2,
    "name": "Taylor",
    "sex": "male",
  },
  "3": Object {
    "age": 11,
    "id": 3,
    "name": "Cleo",
    "sex": "male",
  },
}
`;

exports[`the server API returns one user 1`] = `
Object {
  "age": 29,
  "id": 1,
  "name": "Sam",
  "sex": "male",
}
`;
